# rocs

./: .gitignore  CMakeLists.txt  README.md  linkedlist.geany  rocsmq-canbus.geany  rocsmq-cli.geany  rocsmq-cron.geany  rocsmq-gpio.geany  rocsmq-i2cbus.geany  rocsmq-luaclient.geany  rocsmq-opencv.geany  rocsmq-queue.geany  rocsmq-server.geany  rocsmq-speech.geany  rocsmq-sphinx.geany  rocsmq-tclclient.geany  rocsmq-testclient.geany  rocsmq-tty.geany  rocsmq.geany  test.geany
.rocsmq-client-template/: CMakeLists.txt
.rocsmq-client-template/src/: client_main.c
.template/: CMakeLists.txt
SimpleRaspiConfig/: cronhelper.lua  gpio_motor.lua  run.sh  src.config  src.debug.config
SimpleRaspiConfig/conf/: keywordlist.txt
SimpleRaspiConfig/db/: planner.db
SimpleRaspiConfig/init.d/: rocs
SimpleRaspiConfig/interpreter/: cronhelper.lua  sensor_gpio.lua  sensor_gpio.lua.bak
SimpleRaspiConfig/lib/: cronhelper.lua  gpio_motor.lua  intarray.lua
SimpleRaspiConfig/logic/: input_bump.lua  world_bump.lua
SimpleRaspiConfig/planner/: gpio_motor.lua  idle.lua  surround.lua
doc/: .~lock.project description.odt#  designing_behaviour.txt  gesamtbild.txt  howitworks.txt  messages.txt  project description.odt
examples/SimpleRaspiConfig/interpreter/: sensor_gpio.lua  sensor_ttyresponse.lua
examples/SimpleRaspiConfig/logic/: world_bump.lua
examples/SimpleRaspiConfig/planner/: idle.lua  surround.lua
examples/test/: test.db
examples/test/lib/: characteristics.lua  cronhelper.utf.lua
examples/test/lua/: helloworld.lua
examples/test/sphinx/: keywords.list  keywords_bandid.list
linkedlist/: .geanyprj  CMakeLists.txt  a.out
linkedlist/include/: linkedlist.h
linkedlist/src/: linkedlist.c  log.c  test.c
rocsmq/: CMakeLists.txt  CMakeLists.txt.bak
rocsmq-canbus/: CMakeLists.txt
rocsmq-canbus/include/: canbus.h  canport.h  customconfig.h
rocsmq-canbus/src/: canbus.c  canport.c  customconfig.c  rocs_can_main.c
rocsmq-cli/: CMakeLists.txt
rocsmq-cli/conf/: config.in
rocsmq-cli/include/: cli_config.h  cli_functions.h
rocsmq-cli/src/: cli_functions.c  climain.c
rocsmq-cron/: CMakeLists.txt
rocsmq-cron/conf/: config.in
rocsmq-cron/include/: client_config.h  rocs_cron.h
rocsmq-cron/src/: client_config.c  clientmain.c  rocs_cron.c
rocsmq-daemonizer/: CMakeLists.txt
rocsmq-daemonizer/include/: daemonizer.h
rocsmq-daemonizer/src/: daemonizer.c
rocsmq-gpio/: CMakeLists.txt
rocsmq-gpio/include/: customconfig.h  gpio.h
rocsmq-gpio/src/: clientmain.c  customconfig.c  gpio.c
rocsmq-i2cbus/: CMakeLists.txt  rocsmq-i2cbus.geany
rocsmq-i2cbus/conf/: pca9685.init
rocsmq-i2cbus/include/: customconfig.h  i2cbus.h  pca9685.h
rocsmq-i2cbus/src/: .rocs_i2c_main.c.swp  customconfig.c  i2cbus.c  pca9685.c  rocs_i2c_main.c
rocsmq-luaclient/: CMakeLists.txt
rocsmq-luaclient/conf/: config.in
rocsmq-luaclient/include/: client_config.h
rocsmq-luaclient/src/: client_config.c  clientmain.c
rocsmq-opencv/: CMakeLists.txt
rocsmq-opencv/conf/: config.in
rocsmq-opencv/include/: customconfig.h
rocsmq-opencv/src/: clientmain.cpp  customconfig.cpp
rocsmq-queue/: .geanyprj  CMakeLists.txt
rocsmq-queue/include/: customconfig.h
rocsmq-queue/src/: customconfig.c  queuemain.c  testmain.c
rocsmq-queue_/src/: testmain.c
rocsmq-server/: .CMakeLists.txt.swp  CMakeLists.txt
rocsmq-server/include/: clientlist.h  clientsockets.h  filterlist.h  rocs_cron.h
rocsmq-server/src/: clientlist.c  clientsockets.c  filterlist.c  server.c
rocsmq-speech/: CMakeLists.txt
rocsmq-speech/include/: client_config.h  speech_output.h
rocsmq-speech/src/: client_config.c  clientmain.c  example.c_  example2.c_  speech_output.c  testmain.c
rocsmq-sphinx/: CMakeLists.txt
rocsmq-sphinx/conf/: init.d.in
rocsmq-sphinx/include/: client_config.h  recognizer.h
rocsmq-sphinx/src/: client_config.c  clientmain.c  recognizer.c
rocsmq-tclclient/: CMakeLists.txt
rocsmq-tclclient/conf/: config.in
rocsmq-tclclient/include/: client_config.h
rocsmq-tclclient/script/: foobar.tcl  helloworld.tcl  set_leds.tcl
rocsmq-tclclient/src/: client_config.c  clientmain.c
rocsmq-testclient/: CMakeLists.txt
rocsmq-testclient/conf/: config.in
rocsmq-testclient/conf/conf/: config.in
rocsmq-testclient/src/: testmain.c
rocsmq-tty/: CMakeLists.txt
rocsmq-tty/include/: customconfig.h  tty.h
rocsmq-tty/src/: clientmain.c  customconfig.c  tty.c
rocsmq/include/: configparser.h  linkedlist.h  log.h  messages.h  rocsmq.h  rocsmqthread.h
rocsmq/src/: NCC.i  configparser.c  linkedlist.c  log.c  rocsmq.c  rocsmqthread.c
rocsmq/tcl/: servo.tcl
test/: ledmessages.txt  lua.db  run.sh  stop.sh  test.config
test/lib/: cronhelper.lua  intarray.lua
test/lua/: helloworld.lua  simple_reactions.lua  textorder.lua
test/messages/: servo.msg
